# EHMI-OpenGL-Prak

./: CMakeLists.txt  README.md  howto.txt  start.sh  start2.sh
avis/: CMakeLists.txt  TextureFragmentShader.frag  TextureFragmentShader.glsl  TransformVertexShader.vert  main.cpp
common/: LoadShaders.cpp
src/: CMakeLists.txt
